--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "express-session": "^1.14.0",
+    "generic-pool": "^2.4.2",
+    "log4js": "^0.6.33",
     "markdown": "^0.5.0",
     "mkdirp": "^0.5.1",
     "mongodb": "1.4.15",
     "morgan": "~1.7.0",
-    "node-schedule": "^1.1.0",
-    "log4js": "^0.6.33",
-    "underscore": "^1.8.3",
     "multer": "^1.1.0",
-    "serve-favicon": "~2.3.0"
+    "node-schedule": "^1.1.0",
+    "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
   }
 }
